[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/PlayerSlot.gd" type="Script" id=1]
[ext_resource path="res://resources/chek_b.tres" type="Theme" id=2]
[ext_resource path="res://resources/Hercules.otf" type="DynamicFontData" id=9]
[ext_resource path="res://resources/Neucha-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes/dirt_shop.gd" type="Script" id=11]
[ext_resource path="res://resources/img/slotTextureCarrot.png" type="Texture" id=12]
[ext_resource path="res://resources/img/slotTextureBurak.png" type="Texture" id=13]
[ext_resource path="res://resources/img/slotTexturePotato.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 9
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 273
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 9 )

[node name="DirtShop" type="Node2D"]
scale = Vector2( 7.75904, 7.75904 )
script = ExtResource( 11 )

[node name="Potato" type="TextureButton" parent="."]
margin_left = -88.0
margin_top = -60.0
margin_right = -56.0
margin_bottom = -28.0
texture_normal = ExtResource( 14 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Potato"]
anchor_right = 50.0
margin_left = -35.5978
margin_top = 36.9411
margin_right = -598.597
margin_bottom = 251.941
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "potato_seeds"
align = 1

[node name="Price" type="Label" parent="Potato"]
margin_left = 0.231384
margin_top = -34.7282
margin_right = 339.231
margin_bottom = 308.272
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1

[node name="Carrot" type="TextureButton" parent="."]
margin_left = -14.0
margin_top = -97.0
margin_right = 18.0
margin_bottom = -65.0
texture_normal = ExtResource( 12 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Carrot"]
anchor_right = 50.0
margin_left = -36.3928
margin_top = 36.941
margin_right = -627.393
margin_bottom = 251.941
rect_scale = Vector2( 0.1, 0.1 )
custom_fonts/font = SubResource( 1 )
text = "carrot_seeds"
align = 1

[node name="Price" type="Label" parent="Carrot"]
margin_left = -4.68788
margin_top = -34.4596
margin_right = 424.312
margin_bottom = 308.54
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "20"
align = 1

[node name="Burak" type="TextureButton" parent="."]
margin_left = 58.0
margin_top = -60.0
margin_right = 90.0
margin_bottom = -28.0
texture_normal = ExtResource( 13 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="Burak"]
anchor_right = 50.0
margin_left = -30.1615
margin_top = 36.9301
margin_right = -680.161
margin_bottom = 251.93
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "burak_seeds"
align = 1

[node name="Price" type="Label" parent="Burak"]
margin_left = -5.54504
margin_top = -33.955
margin_right = 452.455
margin_bottom = 309.045
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "100"
align = 1

[connection signal="pressed" from="Potato" to="." method="_on_Potato_pressed"]
[connection signal="pressed" from="Carrot" to="." method="_on_Carrot_pressed"]
[connection signal="pressed" from="Burak" to="." method="_on_Burak_pressed"]
